// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Client Header when editing 1`] = `
<form>
  <h1
    className="MuiTypography-root-269 MuiTypography-display3-271 MuiTypography-gutterBottom-286"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-308 MuiButton-root-293 MuiButton-raised-298 MuiButton-raisedPrimary-300 ClientHeader-button-268"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-294"
        >
          Update
        </span>
        <span
          className="MuiTouchRipple-root-310"
        />
      </button>
      <button
        className="MuiButtonBase-root-308 MuiButton-root-293 MuiButton-raised-298 ClientHeader-button-268"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-294"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-310"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-317 MuiFormControl-marginNormal-318 ClientHeader-textField-267"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-327 MuiInputLabel-root-321 MuiInputLabel-formControl-322 MuiInputLabel-animated-325 MuiInputLabel-shrink-324"
      data-shrink={true}
      htmlFor={undefined}
    >
      Name
    </label>
    <div
      className="MuiInput-root-331 MuiInput-formControl-332 MuiInput-inkbar-333 MuiInput-underline-337"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-340"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Header when updating 1`] = `
<form>
  <h1
    className="MuiTypography-root-348 MuiTypography-display3-350 MuiTypography-gutterBottom-365"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-387 MuiButtonBase-disabled-388 MuiButton-root-372 MuiButton-raised-377 MuiButton-raisedPrimary-379 MuiButton-disabled-381 ClientHeader-button-347"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-373"
        >
          Update
        </span>
      </button>
      <button
        className="MuiButtonBase-root-387 MuiButtonBase-disabled-388 MuiButton-root-372 MuiButton-raised-377 MuiButton-disabled-381 ClientHeader-button-347"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-373"
        >
          Cancel
        </span>
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-389 MuiFormControl-marginNormal-390 ClientHeader-textField-346"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-399 MuiInputLabel-root-393 MuiInputLabel-formControl-394 MuiInputLabel-animated-397 MuiInputLabel-shrink-396"
      data-shrink={true}
      htmlFor={undefined}
    >
      Name
    </label>
    <div
      className="MuiInput-root-403 MuiInput-disabled-408 MuiInput-formControl-404 MuiInput-inkbar-405 MuiInput-underline-409"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-412 MuiInput-inputDisabled-414"
        defaultValue={undefined}
        disabled={true}
        id={undefined}
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Header with a client 1`] = `
<form>
  <h1
    className="MuiTypography-root-190 MuiTypography-display3-192 MuiTypography-gutterBottom-207"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-229 MuiButton-root-214 MuiButton-raised-219 ClientHeader-button-189"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-215"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-231"
        />
      </button>
      <button
        className="MuiButtonBase-root-229 MuiButton-root-214 MuiButton-raised-219 MuiButton-raisedSecondary-222 ClientHeader-button-189"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-215"
        >
          Remove
        </span>
        <span
          className="MuiTouchRipple-root-231"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-238 MuiFormControl-marginNormal-239 ClientHeader-textField-188"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-248 MuiInputLabel-root-242 MuiInputLabel-formControl-243 MuiInputLabel-animated-246 MuiInputLabel-shrink-245"
      data-shrink={true}
      htmlFor={undefined}
    >
      Name
    </label>
    <div
      className="MuiInput-root-252 MuiInput-formControl-253 MuiInput-inkbar-254 MuiInput-underline-258"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-261"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Clients List with adding a new client 1`] = `
<table
  className="MuiTable-root-135 ClientsList-root-131"
>
  <thead>
    <tr
      className="MuiTableRow-root-136 MuiTableRow-typeHead-137"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeHead-143"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-136"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeBody-144"
        scope={undefined}
      >
        <div
          className="MuiInput-root-149 MuiInput-disabled-154 MuiInput-inkbar-151 MuiInput-underline-155"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-158 MuiInput-inputDisabled-160"
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value="Some New Client"
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeBody-144 ClientsList-actionCell-133"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-132"
        >
          <button
            className="MuiButtonBase-root-179 MuiButtonBase-disabled-180 MuiButton-root-164 MuiButton-flatPrimary-166 MuiButton-disabled-173"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiButton-label-165"
            >
              Add
            </span>
          </button>
          <div
            className="MuiCircularProgress-root-181 MuiCircularProgress-colorPrimary-182 ClientsList-buttonProgress-134"
            role="progressbar"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg-184 MuiCircularProgress-svgIndeterminate-185"
              viewBox="0 0 50 50"
            >
              <circle
                className="MuiCircularProgress-circle-186 MuiCircularProgress-circleIndeterminate-187"
                cx={25}
                cy={25}
                fill="none"
                r={20}
                strokeWidth={3.6}
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-136"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeBody-144"
        scope={undefined}
      >
        <a>
          Some Client
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Clients List with loading all clients 1`] = `
<table
  className="MuiTable-root-62 ClientsList-root-58"
>
  <thead>
    <tr
      className="MuiTableRow-root-63 MuiTableRow-typeHead-64"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeHead-70"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-63"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71"
        scope={undefined}
      >
        <div
          className="MuiInput-root-76 MuiInput-inkbar-78 MuiInput-underline-82"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-85"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71 ClientsList-actionCell-60"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-59"
        >
          <button
            className="MuiButtonBase-root-106 MuiButton-root-91 MuiButton-flatPrimary-93"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-92"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-108"
            />
          </button>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-63"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71"
        colSpan={2}
        scope={undefined}
      >
        <div
          className="MuiLinearProgress-root-115 MuiLinearProgress-primaryColor-116"
          mode="query"
          role="progressbar"
        >
          <div
            className="MuiLinearProgress-bar-122 MuiLinearProgress-primaryColorBar-117 MuiLinearProgress-indeterminateBar1-127"
            style={Object {}}
          />
          <div
            className="MuiLinearProgress-bar-122 MuiLinearProgress-primaryColorBar-117 MuiLinearProgress-indeterminateBar2-128"
            style={Object {}}
          />
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-63"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71"
        scope={undefined}
      >
        <a>
          Some Client
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Clients List with no clients 1`] = `
<table
  className="MuiTable-root-5 ClientsList-root-1"
>
  <thead>
    <tr
      className="MuiTableRow-root-6 MuiTableRow-typeHead-7"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-11 MuiTableCell-paddingDefault-16 MuiTableCell-typeHead-13"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-6"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-11 MuiTableCell-paddingDefault-16 MuiTableCell-typeBody-14"
        scope={undefined}
      >
        <div
          className="MuiInput-root-19 MuiInput-inkbar-21 MuiInput-underline-25"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-28"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-11 MuiTableCell-paddingDefault-16 MuiTableCell-typeBody-14 ClientsList-actionCell-3"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-2"
        >
          <button
            className="MuiButtonBase-root-49 MuiButton-root-34 MuiButton-flatPrimary-36"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-35"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-51"
            />
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Products List with adding a new product 1`] = `
<table
  className="MuiTable-root-552 ProductsList-root-548"
>
  <thead>
    <tr
      className="MuiTableRow-root-553 MuiTableRow-typeHead-554"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-558 MuiTableCell-paddingDefault-563 MuiTableCell-typeHead-560"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-553"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-558 MuiTableCell-paddingDefault-563 MuiTableCell-typeBody-561"
        scope={undefined}
      >
        <div
          className="MuiInput-root-566 MuiInput-disabled-571 MuiInput-inkbar-568 MuiInput-underline-572"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-575 MuiInput-inputDisabled-577"
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Product Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value="Some New Product"
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-558 MuiTableCell-paddingDefault-563 MuiTableCell-typeBody-561 ProductsList-actionCell-550"
        scope={undefined}
      >
        <div
          className="ProductsList-wrapper-549"
        >
          <button
            className="MuiButtonBase-root-596 MuiButtonBase-disabled-597 MuiButton-root-581 MuiButton-flatPrimary-583 MuiButton-disabled-590"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiButton-label-582"
            >
              Add
            </span>
          </button>
          <div
            className="MuiCircularProgress-root-598 MuiCircularProgress-colorPrimary-599 ProductsList-buttonProgress-551"
            role="progressbar"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg-601 MuiCircularProgress-svgIndeterminate-602"
              viewBox="0 0 50 50"
            >
              <circle
                className="MuiCircularProgress-circle-603 MuiCircularProgress-circleIndeterminate-604"
                cx={25}
                cy={25}
                fill="none"
                r={20}
                strokeWidth={3.6}
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-553"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-558 MuiTableCell-paddingDefault-563 MuiTableCell-typeBody-561"
        scope={undefined}
      >
        <a>
          Some Product
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Products List with loading all products 1`] = `
<table
  className="MuiTable-root-479 ProductsList-root-475"
>
  <thead>
    <tr
      className="MuiTableRow-root-480 MuiTableRow-typeHead-481"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-485 MuiTableCell-paddingDefault-490 MuiTableCell-typeHead-487"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-480"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-485 MuiTableCell-paddingDefault-490 MuiTableCell-typeBody-488"
        scope={undefined}
      >
        <div
          className="MuiInput-root-493 MuiInput-inkbar-495 MuiInput-underline-499"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-502"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Product Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-485 MuiTableCell-paddingDefault-490 MuiTableCell-typeBody-488 ProductsList-actionCell-477"
        scope={undefined}
      >
        <div
          className="ProductsList-wrapper-476"
        >
          <button
            className="MuiButtonBase-root-523 MuiButton-root-508 MuiButton-flatPrimary-510"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-509"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-525"
            />
          </button>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-480"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-485 MuiTableCell-paddingDefault-490 MuiTableCell-typeBody-488"
        colSpan={2}
        scope={undefined}
      >
        <div
          className="MuiLinearProgress-root-532 MuiLinearProgress-primaryColor-533"
          mode="query"
          role="progressbar"
        >
          <div
            className="MuiLinearProgress-bar-539 MuiLinearProgress-primaryColorBar-534 MuiLinearProgress-indeterminateBar1-544"
            style={Object {}}
          />
          <div
            className="MuiLinearProgress-bar-539 MuiLinearProgress-primaryColorBar-534 MuiLinearProgress-indeterminateBar2-545"
            style={Object {}}
          />
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-480"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-485 MuiTableCell-paddingDefault-490 MuiTableCell-typeBody-488"
        scope={undefined}
      >
        <a>
          Some Product
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Products List with no products 1`] = `
<table
  className="MuiTable-root-422 ProductsList-root-418"
>
  <thead>
    <tr
      className="MuiTableRow-root-423 MuiTableRow-typeHead-424"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-428 MuiTableCell-paddingDefault-433 MuiTableCell-typeHead-430"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-423"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-428 MuiTableCell-paddingDefault-433 MuiTableCell-typeBody-431"
        scope={undefined}
      >
        <div
          className="MuiInput-root-436 MuiInput-inkbar-438 MuiInput-underline-442"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-445"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Product Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-428 MuiTableCell-paddingDefault-433 MuiTableCell-typeBody-431 ProductsList-actionCell-420"
        scope={undefined}
      >
        <div
          className="ProductsList-wrapper-419"
        >
          <button
            className="MuiButtonBase-root-466 MuiButton-root-451 MuiButton-flatPrimary-453"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-452"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-468"
            />
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
